# utils-s3http-connector

./: .gitignore  pyproject.toml  requirements.txt
s3http_connector/: __init__.py  utils.py
s3http_connector/models/: __init__.py  base.py
