[tool.poetry]
name = "s3http-connector"
version = "0.1.0"
description = ""
authors = ["oktapian <oktapian@jkt1.ebdesk.com>"]
readme = "README.md"
packages = [{include = "s3http_connector"}]

[tool.poetry.dependencies]
python = ">=3.10.12, <3.12"
boto3 = "^1.34.144"
loguru = "^0.7.2"
pydantic = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
